# nvmeof-project

./: .gitmodules  README.md
cloudlab/: nvme-tcp-3nodes-profile.py
nvme_local_result/randread/: randread.1.txt  randread.2.txt  randread.3.txt  randread.4.txt  randread.5.txt  randread.6.txt  randread.7.txt  randread.8.txt
nvme_local_result/randrw/: randrw.1.txt  randrw.2.txt  randrw.3.txt  randrw.4.txt  randrw.5.txt  randrw.6.txt  randrw.7.txt  randrw.8.txt
nvme_local_result/randwrite/: randwrite.1.txt  randwrite.2.txt  randwrite.3.txt  randwrite.4.txt  randwrite.5.txt  randwrite.6.txt  randwrite.7.txt  randwrite.8.txt
nvmf_rdma_result/randread/: randread.1.txt  randread.2.txt  randread.3.txt  randread.4.txt  randread.5.txt  randread.6.txt  randread.7.txt  randread.8.txt
nvmf_rdma_result/randrw/: randrw.1.txt  randrw.2.txt  randrw.3.txt  randrw.4.txt  randrw.8.txt
nvmf_rdma_result/randwrite/: randwrite.1.txt  randwrite.2.txt  randwrite.3.txt  randwrite.4.txt  randwrite.5.txt  randwrite.6.txt  randwrite.7.txt  randwrite.8.txt
nvmf_tcp_result/randread/: randread.1.txt  randread.2.txt  randread.3.txt  randread.4.txt  randread.5.txt  randread.6.txt  randread.7.txt  randread.8.txt
nvmf_tcp_result/randrw/: randrw.1.txt  randrw.2.txt  randrw.3.txt  randrw.4.txt  randrw.5.txt  randrw.6.txt  randrw.7.txt  randrw.8.txt  rw.0.txt  rw.100.txt  rw.25.txt  rw.50.txt  rw.75.txt
nvmf_tcp_result/randwrite/: randwrite.1.txt  randwrite.2.txt  randwrite.3.txt  randwrite.4.txt  randwrite.5.txt  randwrite.6.txt  randwrite.7.txt  randwrite.8.txt
scripts/: nvme-tcp-client-setup.sh  nvme-tcp-target-setup.sh  rdma-setup.sh
scripts/blktrace/: blktrace.sh
scripts/fio/: randread-iouring-shared.sh  randread-iouring.sh  randread.sh  randrw.sh  randwrite-iouring-shared.sh  randwrite-iouring.sh  randwrite.sh  seqread-iouring-shared.sh  seqread-iouring.sh  seqwrite-iouring-shared.sh  seqwrite-iouring.sh
scripts/setup/: iscsi-tcp-client-setup.sh  iscsi-tcp-target-setup.sh  nvme-rdma-target-setup.sh  nvme-tcp-client-setup.sh  (+3 more)
spdk_local_result/: nvme_randread.1.txt  nvme_randread.2.txt  nvme_randread.3.txt  nvme_randread.4.txt  nvme_randread.5.txt  nvme_randread.6.txt  spdk_randread.1.txt
src/: CMakeLists.txt  benchmark.cc  block_initiator.cc  block_rw_nvmeof.cc  block_target.cc  build.sh  common.hpp  eval.py  file_initiator.cc  file_rw_kernel.cc  file_rw_nvmeof.cc  file_server.h  file_target.cc  fio_autotest.sh  initiator.cc  initiator.cpp  local_read.cc  local_read.cpp  monitor.py  net.h  nvme.h  plot.ipynb  remount.sh  rw_kernel.cc  target.cc  target.cpp
src/proto/: block.proto  net.proto
src/results/: experiment-largefile.txt  fs-grpc.txt  fs-nvmeof.txt  fs.txt  nvmeof-fio.txt
src/results/fio/: rand_read_iouring.txt  rand_read_sync.txt  rand_rw_iouring.txt  rand_rw_sync.txt  rand_write_iouring.txt  rand_write_sync.txt  seq_read_iouring.txt  seq_read_sync.txt  seq_rw_iouring.txt  seq_rw_sync.txt  seq_write_iouring.txt  seq_write_sync.txt
src/results/rubble/: grpc-posix.txt  grpc.txt  nvmeof-tcp-posix.txt  nvmeof-tcp.txt  result-nvmeof-nonoffloading-2.txt  result-nvmeof-nonoffloading-old.txt  result-nvmeof-nonoffloading-tmp.txt  result-nvmeof-nonoffloading.txt  result-nvmeof-offloading.txt  result-nvmeof.txt  result-rdma-2.txt  result-rdma.txt  result.txt
src/results/rubble-2/: result-nvmeof-nonoffloading.txt  result-rdma-2.txt  result-rdma.txt  tmp-2.txt  tmp.txt
src/results/rubble/non-offloading/: 16kb.txt  17m.txt  1m.txt  4k.txt  512k.txt  64k.txt
src/results/rubble/offloading/: 17m.txt  1m.txt  4k.txt
(+260 files in other folders)
